@@ -1,35 +1,20 @@
 package org.sakaiproject.sitemanage.impl;
 
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLDecoder;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.DocumentBuilderFactory;
-import javax.xml.parsers.ParserConfigurationException;
-
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-
 import org.jdom.Document;
 import org.jdom.Element;
-import org.jdom.output.XMLOutputter;
 import org.jdom.JDOMException;
 import org.jdom.input.SAXBuilder;
-
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.sakaiproject.component.api.ServerConfigurationService;
 import org.sakaiproject.email.api.EmailService;
 import org.sakaiproject.emailtemplateservice.model.EmailTemplate;
@@ -40,14 +25,6 @@ import org.sakaiproject.tool.api.Session;
 import org.sakaiproject.tool.api.SessionManager;
 import org.sakaiproject.user.api.User;
 import org.sakaiproject.user.api.UserDirectoryService;
-import org.sakaiproject.util.ResourceLoader;
-//import org.w3c.dom.Document;
-//import org.w3c.dom.Element;
-//import org.w3c.dom.Node;
-//import org.w3c.dom.NodeList;
-import org.xml.sax.SAXException;
-
-import org.apache.xerces.util.DOMUtil;
 
 
 
@@ -110,7 +87,7 @@ public class ETSUserNotificationProviderImpl implements UserNotificationProvider
         replacementValues.put("newPassword", "");
         replacementValues.put("productionSiteName", "");
         
-		if (emailTemplateService.getRenderedTemplateForUser(this.NOTIFY_ADDED_PARTICIPANT, "/user/admin", replacementValues) == null) 
+		if (emailTemplateService.getRenderedTemplateForUser(NOTIFY_ADDED_PARTICIPANT, "/user/admin", replacementValues) == null) 
 			loadAddedParticipantMail();
 		else 
 			M_log.info("templates for " + NOTIFY_ADDED_PARTICIPANT + " exist");
@@ -133,10 +110,6 @@ public class ETSUserNotificationProviderImpl implements UserNotificationProvider
 		if (from != null) {
 			String productionSiteName = serverConfigurationService.getString(
 					"ui.service", "");
-			String productionSiteUrl = serverConfigurationService
-					.getPortalUrl();
-			String nonOfficialAccountUrl = serverConfigurationService.getString(
-					"nonOfficialAccount.url", null);
 			String emailId = user.getEmail();
 			String to = emailId;
 			String headerTo = emailId;
@@ -161,7 +134,7 @@ public class ETSUserNotificationProviderImpl implements UserNotificationProvider
 	            replacementValues.put("localSakaiUrl", serverConfigurationService.getPortalUrl());
 	            replacementValues.put("siteName", siteTitle);
 	            replacementValues.put("productionSiteName", productionSiteName);
-	            replacementValues.put("newNonOfficialAccount", new Boolean(newNonOfficialAccount).toString().toLowerCase());
+	            replacementValues.put("newNonOfficialAccount", Boolean.valueOf(newNonOfficialAccount).toString().toLowerCase());
 	         
 	            M_log.debug("getting template: sitemange.notifyAddedParticipant");
 	            RenderedTemplate template = null;
@@ -172,8 +145,9 @@ public class ETSUserNotificationProviderImpl implements UserNotificationProvider
 	           }
 	           catch (Exception e) {
 	        	   e.printStackTrace();
+	        	   return;
 	           }
-			List headers = new ArrayList();
+			List<String> headers = new ArrayList<String>();
 			headers.add("Precedence: bulk");
 			
 			content = template.getRenderedMessage();	
@@ -191,8 +165,6 @@ public class ETSUserNotificationProviderImpl implements UserNotificationProvider
 		String from = getSetupRequestEmailAddress();
 		String productionSiteName = serverConfigurationService.getString(
 				"ui.service", "");
-		String productionSiteUrl = serverConfigurationService.getPortalUrl();
-		
 		String newUserEmail = user.getEmail();
 		String to = newUserEmail;
 		String headerTo = newUserEmail;
@@ -224,13 +196,13 @@ public class ETSUserNotificationProviderImpl implements UserNotificationProvider
 	            replacementValues.put("newPassword",newUserPassword);
 	            replacementValues.put("siteName", siteTitle);
 	            replacementValues.put("productionSiteName", productionSiteName);
-	        RenderedTemplate template = emailTemplateService.getRenderedTemplateForUser(this.NOTIFY_NEW_USER, user.getReference(), replacementValues);    		
+	        RenderedTemplate template = emailTemplateService.getRenderedTemplateForUser(NOTIFY_NEW_USER, user.getReference(), replacementValues);    		
 	    	if (template == null)
 				return;
 	        content = template.getRenderedMessage();
 			
 			String message_subject = template.getRenderedSubject();
-			List headers = new ArrayList();
+			List<String> headers = new ArrayList<String>();
 			headers.add("Precedence: bulk");
 			emailService.send(from, to, message_subject, content, headerTo,
 					replyTo, headers);
@@ -253,7 +225,7 @@ public class ETSUserNotificationProviderImpl implements UserNotificationProvider
 	}
 
 
-
+	@SuppressWarnings("unchecked")
 	private void loadAddedParticipantMail() {
 		try {
 			//we need a user session to avoind potential NPE's
@@ -262,11 +234,11 @@ public class ETSUserNotificationProviderImpl implements UserNotificationProvider
 		    sakaiSession.setUserEid(ADMIN);
 			InputStream in = ETSUserNotificationProviderImpl.class.getClassLoader().getResourceAsStream("notifyAddedParticipants.xml");
 			Document document = new SAXBuilder(  ).build(in);
-			List it = document.getRootElement().getChildren("emailTemplate");
+			List<Element> it = document.getRootElement().getChildren("emailTemplate");
 			
 			for (int i =0; i < it.size(); i++) {
 				Element xmlTemplate = (Element)it.get(i);
-				xmlToTemplate(xmlTemplate, this.NOTIFY_ADDED_PARTICIPANT);
+				xmlToTemplate(xmlTemplate, NOTIFY_ADDED_PARTICIPANT);
 			}
 			sakaiSession.setUserId(null);
 		    sakaiSession.setUserEid(null);
@@ -283,6 +255,7 @@ public class ETSUserNotificationProviderImpl implements UserNotificationProvider
 		} 
 	}
 
+	@SuppressWarnings("unchecked")
 	private void loadNewUserMail() {
 		try {
 			//we need a user session to avoind potential NPE's
@@ -291,11 +264,11 @@ public class ETSUserNotificationProviderImpl implements UserNotificationProvider
 		    sakaiSession.setUserEid(ADMIN);
 			InputStream in = ETSUserNotificationProviderImpl.class.getClassLoader().getResourceAsStream("notifyNewuser.xml");
 			Document document = new SAXBuilder(  ).build(in);
-			List it = document.getRootElement().getChildren("emailTemplate");
+			List<Element> it = document.getRootElement().getChildren("emailTemplate");
 			
 			for (int i =0; i < it.size(); i++) {
 				Element xmlTemplate = (Element)it.get(i);
-				xmlToTemplate(xmlTemplate, this.NOTIFY_NEW_USER);
+				xmlToTemplate(xmlTemplate, NOTIFY_NEW_USER);
 			}
 			sakaiSession.setUserId(null);
 		    sakaiSession.setUserEid(null);
